# backend

./: .env.example  .gitignore  Cargo.toml  README.md
src/: emails.rs  main.rs
