[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
imap = "2.4.1"
lambda_runtime = "0.11.2"
lazy_static = "1.4.0"
lettre = "0.11.7"
native-tls = "0.2.12"
oauth2 = "4.4.2"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
